--- a/projekt_3/index.html
+++ b/projekt_3/index.html
@@ -17,26 +17,28 @@
   <body>
     <div class="container"></div>
     <header>
+      
       <div class="logo">
           <img src="./icons/Teddy Bear Svg Png Icon Free Download - Teddy Bear Vector Ico PNG Transparent With Clear Background ID 177711 png - Free PNG Images.jpg" alt="logo">
       </div>
       <nav>
+        <div id="menu">
           <ul>
               <li><a href="#">Domov</a></li>
               <li><a href="#">O nás</a></li>
               <li><a href="#">Fotogaléria</a></li>
               <li><a href="#">Kontakt</a></li>
           </ul>
+        </div>
       </nav>
       <div>
         <button id="dark-mode-toggle">Tmavý mód</button>
       </div>
       <div class="menu-icon">
           <i class="fa-solid fa-bars"></i>
-          <!-- <i class="fa-solid fa-xmark"></i> -->
       </div>
     </header>
-    <div class="container"></div>
+    <div class="container-menu"></div>
     <div class="welcome"> 
       <h1> Vitajte na stránkach našej materskej školy MACKO! </h1> 
     </div>
@@ -53,15 +55,9 @@
     </div>
   <div class="gallery">
     <div class="gallery-wrapper">
-      <div class="envelop"><img src="./images/deti_zelenina.jpg" alt="image1" /></div>
-      <div class="envelop"><img src="./images/deti cvicia.jpg"alt="image2" /> </div>
-      <div class="envelop"><img src="./images/deti_omalovanka.jpg"alt="image3" /></div>
-      <div class="envelop"><img src="./images/v_triede.jpg" alt="image4" /></div>
-      <div class="envelop"><h1>Naše aktivity</h1></div>
-      <div class="envelop"><img src="./images/deti_ihrisko.jpg" alt="image5" /></div>
-      <div class="envelop"><img src="./images/karneval.jpg" alt="image6" /></div>
-      <div class="envelop"><img src="./images/vela_deti.jpg" alt="image7" /></div>
-      <div class="envelop"><img src="./images/deti_vesmir.jpg" alt="image8" /></div>
+      <div class="my-img"><img src="./images/deti_zelenina.jpg" alt="image1" zvacsit="enlarge" zmensit="reduce"></div>
+      <div class="my-img"><img src="./images/deti_vesmir.jpg"alt="image2" zvacsit="enlarge" zmensit="reduce"/></div>
+      <div class="my-img"><img src="./images/deti cvicia.jpg"alt="image3" zvacsit="enlarge" zmensit="reduce"/></div>
     </div>
   </div>
   <div class="reviews-wrapper">
@@ -71,7 +67,7 @@
     </div> 
     <div class="reviews-people">
       <div class="they">
-        <div class="image"><img src=".//images/fesaci.jpg" alt="kids"></div>
+        <div class="image"><img src="./images/fesaci.jpg" alt="kids"></div>
           <p><br>"Naša škôlka je tá naj-super na svete! Pani učiteľky nám každý deň pripravia veeeľa zaujímavých hier. Máme Vás radi! Ste super!""
           </p><br>
           <p class="name">Anička a Robko</p><br>
@@ -111,6 +107,9 @@
       </section>
       </div>     
     </div>
+    <div class="arrow">
+     <img src="./icons/šípka.webp" alt="arrow"/>
+    </div>
   </div> 
   <div class="footer">
     <div class="footer-container">
@@ -121,6 +120,7 @@
       </div>   
     </div>
   </div>
+  
    
    </body>
   </html>
